tests/parse_print/random_perturb/enum_liberated/delete-08/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/enum_liberated/delete-08/delete-08.essence:1:1:
unexpected languae
expecting end of input, language, or statement
    languae Essence 1.3
    ^